Adjust the size of text box in todo cards, solved overlapping with the buttons

--- a/css/todo.css
+++ b/css/todo.css
@@ -214,10 +214,9 @@ main {
   box-shadow: 0px 0px 10px 2px #cbce24;
 }
 .task-card > input {
-  height: 100%;
+  width: 80%;
+  height: auto;
   color: rgb(255, 255, 255);
-  flex: 1; /* allow it to grow and shrink */
-  min-width: 0;
   word-break: break-word;
   padding: 10px;
   border: none;
@@ -225,6 +224,7 @@ main {
   font-family: sans-serif;
   font-size: 14px;
   background-color: transparent;
+  /* background-color: red !important;   */
 }
 
 .task-card > span {
